<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainVM"
            type="com.example.ktrotest.viewmodel.MainViewModel"/>
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/insert_test"
        android:onClick="@{() -> mainVM.insertBoxOffice()}"
        />


    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintBottom_toTopOf="@+id/request_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delete_test"
        android:onClick="@{() -> mainVM.deleteBoxOfficeInfo() }"
        />

    <Button
        android:id="@+id/request_moviename_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintBottom_toTopOf="@+id/request_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_moviename"
        android:onClick="@{() -> mainVM.getMovieName()}"
        />

    <Button
        android:id="@+id/request_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn"
        app:layout_constraintEnd_toStartOf="@+id/save_btn"
        android:text="@string/select_boxoffice"
        android:onClick="@{() -> mainVM.getBoxOfficeInfo()}"
        />
    <Button
        android:id="@+id/delete_five_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/month"
        app:layout_constraintBottom_toTopOf="@id/request_btn"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintEnd_toStartOf="@+id/request_moviename_btn"
        android:text="@string/delete_five_btn"
        android:onClick="@{() -> mainVM.deleteBelowFiveMovies()}"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/ktor_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month"
        android:onClick="@{() -> mainVM.getDailyBoxOfficeByKtor()}"
        />

    <com.example.ktrotest.ui.JaebinNumberPicker
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/movieItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3"
        android:descendantFocusability="blocksDescendants"
        app:min="2010"
        app:max="2022"
        android:value="@={mainVM.year}"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/movieItem"
            app:layout_constraintBottom_toBottomOf="@id/year"
            app:layout_constraintStart_toEndOf="@id/year"
            app:layout_constraintEnd_toStartOf="@id/month"
            android:text="@string/year"
            android:textSize="15sp"
            />


    <com.example.ktrotest.ui.JaebinNumberPicker
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/movieItem"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintWidth_percent="0.14"
        android:descendantFocusability="blocksDescendants"
        app:min="1"
        app:max="12"
        android:value="@={mainVM.month}"
        />


    <TextView
        android:id="@+id/testString"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="7dp"
        app:layout_constraintTop_toBottomOf="@id/month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="5sp"
        android:text="@{mainVM.fetchMsg}"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/movieItem"
        app:layout_constraintBottom_toBottomOf="@+id/month"
        app:layout_constraintStart_toEndOf="@id/month"
        app:layout_constraintEnd_toStartOf="@id/day"
        android:text="@string/month"
        android:textSize="15sp"
        />

    <com.example.ktrotest.ui.JaebinNumberPicker
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/movieItem"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.14"
        android:descendantFocusability="blocksDescendants"
        app:min="1"
        app:max="31"
        android:value="@={mainVM.day}"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/movieItem"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/day"
        android:textSize="15sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieItem"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>